# weft-ui

./: .gitignore  README.md  pixi.toml  pyproject.toml
.claude/: launch.json
demo/: .gitignore  constants_mcp.py  fixtures.py  seed_dft_survey.py  seed_kernel_service.py
docs/: embedding.md
examples/: host_app.py
mockups/: 01-jobs-panel.html  03-compute-cards.html  04-add-compute-wizard.html  05-chat.html  README.md  index.html  weft.css
server/tests/: conftest.py  test_chat_gate.py  test_conformance.py  test_embed.py  test_events.py  test_facade.py  test_lock.py  test_uiapi.py  test_wizard.py
server/weft_ui/: auth.py  config.py  embed.py  events.py  facade.py  lock.py  main.py  uiapi.py  wizard.py
shared/: types.ts
shared/samples/: BASELINE  array_status.json  audit_tail.json  bundle_export.json  bundle_import.json  data_describe.json  data_register.json  doctor.json  env_ensure.json  env_evict.json  env_published_empty.json  env_status.json  events_by_kind.json  job_error.json  jobs_where.json  kernel_exec.json  kernel_promote.json  kernel_restart.json  kernel_start.json  kernel_status.json  kernel_transcript.json  list_envs.json  list_kernels.json  list_services.json  provenance.json  retained_runs.json  run_file_read.json  run_file_stat.json  run_forget.json  run_inventory.json  run_retain.json  run_retain_no_durable.json  service_start.json  service_status.json  service_stop.json  sites_describe.json  sites_list.json  task_result_manifest.json  (+2 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+35 files in other folders)
